Optimize components and update SCSS structure

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://OlaEla.github.io/react-shop-app",
+  "homepage": ".",
   "name": "shopapp",
   "version": "0.1.0",
   "private": true,
